--- a/bgx/dashboard/bjx/public/index.html
+++ b/bgx/dashboard/bjx/public/index.html
@@ -7,13 +7,13 @@
     <title> BGX Web Viewer [ALPHA] </title>
   </head>
   <body>
-    <div id="app" class="container"></div>
-    <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
+    <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg" style="width: 0; height: 0">
       <defs>
         <marker id="end" viewBox="0 -5 10 10" refX="10" refY="0" markerWidth="6" markerHeight="6" orient="auto">
           <path d="M0,-5L10,0L0,5"></path>
         </marker>
       </defs>
     </svg>
+    <div id="app" class="container"></div>
   <script type="text/javascript" src="bundle.js"></script></body>
 </html>
